resilliant ui 2 slides added for resilinat zone and optimistic UI

--- a/2.html
+++ b/2.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 p-4">
+  <div class="flex items-center justify-center min-h-screen bg-indigo-100 p-4">
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-4xl">
       <h2 class="text-3xl font-bold text-gray-800 mb-6 text-center">💥 Real-World Scenarios That Need UI Resilience</h2>
       <div class="overflow-x-auto">
