--- a/1.html
+++ b/1.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 p-4">
+  <div class="flex items-center justify-center min-h-screen bg-indigo-100 p-4">
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-4">💡 Resilience Engineering in UI/UX</h2>
       <p class="text-gray-600 text-lg mb-6">Designing frontend systems that withstand failures, degrade gracefully, and recover quickly.</p>
