--- a/4.html
+++ b/4.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 p-4">
+  <div class="flex items-center justify-center min-h-screen bg-indigo-100 p-4">
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-md text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-6">🔄 Retry Logic (with backoff)</h2>
       <p class="text-gray-600 text-lg mb-4">Auto-retry API calls a few times before showing error.</p>
