--- a/8.html
+++ b/8.html
@@ -13,7 +13,7 @@
   </style>
 </head>
 <body>
-  <div class="flex items-center justify-center min-h-screen bg-gray-100 p-4">
+  <div class="flex items-center justify-center min-h-screen bg-indigo-100 p-4">
     <div class="bg-white rounded-lg shadow-xl p-8 max-w-2xl text-center">
       <h2 class="text-3xl font-bold text-gray-800 mb-6">🧠 UX Best Practices for Resilient Interfaces</h2>
       <ul class="list-none space-y-4 text-left text-gray-700 text-lg">
