--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         /* Configure reveal.js to accommodate iframe content */
         .reveal {
             font-family: "Inter", sans-serif;
+            background-color: #dbeafe;
         }
         
         /* Style iframe slides */
@@ -130,6 +131,22 @@
 
             <section class="iframe-slide">
                 <iframe src="8.html" 
+                        frameborder="0" 
+                        allowfullscreen
+                        loading="eager">
+                </iframe>
+            </section>
+
+            <section class="iframe-slide">
+                <iframe src="10.html" 
+                        frameborder="0" 
+                        allowfullscreen
+                        loading="eager">
+                </iframe>
+            </section>
+
+            <section class="iframe-slide">
+                <iframe src="11.html" 
                         frameborder="0" 
                         allowfullscreen
                         loading="eager">
