added pointers for zone and optimistic UIs

--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
             </section>
 
             <section class="iframe-slide">
+                <iframe src="9.html" 
+                        frameborder="0" 
+                        allowfullscreen
+                        loading="eager">
+                </iframe>
+            </section>
+
+            <section class="iframe-slide">
                 <iframe src="10.html" 
                         frameborder="0" 
                         allowfullscreen
@@ -154,12 +162,21 @@
             </section>
 
             <section class="iframe-slide">
-                <iframe src="9.html" 
+                <iframe src="12.html" 
                         frameborder="0" 
                         allowfullscreen
                         loading="eager">
                 </iframe>
             </section>
+
+            <section class="iframe-slide">
+                <iframe src="13.html" 
+                        frameborder="0" 
+                        allowfullscreen
+                        loading="eager">
+                </iframe>
+            </section>
+
         </div>
     </div>
 
